🐛 Fix dark mode table.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,8 @@ html.iframe body {
     background-color: transparent !important;
 }
 
-html.dark .list-group-item a, html.dark .accordion-item {
+html.dark .list-group-item a,
+html.dark .accordion-item,
+html.dark .table > :not(caption) > * > * {
   color: #e1e1e1 !important;
 }
